# c-project

./: CMakeLists.txt  README.md  cmake_commands.txt  main.c
rule/: CMakeLists.txt  rule.c  rule.h  rule.inc
tests/: CMakeLists.txt
tests/rule/: CMakeLists.txt  test-print-read.c
